--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.5",
+    "@stripe/stripe-js": "^6.1.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^12.5.0",
     "jose": "^6.0.10",
@@ -17,9 +18,10 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "mysql2": "^3.13.0",
-    "next": "15.2.2",
+    "next": "^15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
